# Vulkan-demo

./: .gitignore  CMakeLists.txt  README.md
Android/app/src/main/cpp/: CMakeLists.txt  VulkanApp.cpp  VulkanApp.h  main.cpp
Android/app/src/main/res/values/: themes.xml
Android/app/src/main/res/values-night/: themes.xml
Source/: CMakeLists.txt  Platform.cpp  Platform.h  VulkanApp.cpp  VulkanApp.h  main.cpp
